# Test-Repo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: _README.md
.claude/commands/: _README.md
.github/workflows/: ci.yml  e2e.yml  spec-discipline.yml
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
openspec/: STATUS.md  vision.md
openspec/_bmad-output/: STAGING.md
openspec/architecture/: ARCHITECTURE.md
openspec/architecture/decisions/: ADR-0001-monorepo-layout.md  ADR-0002-bmad-integration.md  ADR-0003-appscript-runtime.md  ADR-0004-spec-storage-discipline.md  ADR-0005-traceability-and-journaling.md  ADR-0006-testing-tiers.md  ADR-0007-llm-stochastic-assertions.md  ADR-0008-ci-gates-and-phase-exits.md
openspec/architecture/phases/: PHASE-0-foundation.md  PHASE-1-spec-hygiene.md  PHASE-2-traceability-runtime.md  PHASE-3-anthropic-client.md  PHASE-4-shared-libs.md  PHASE-5-first-appscript-project.md
openspec/briefs/: _TEMPLATE.md
openspec/changes/CHG-0001/: proposal.md
openspec/changes/CHG-0002/: proposal.md
openspec/changes/CHG-0003/: proposal.md
openspec/epics/: _TEMPLATE.md
openspec/prd/: _TEMPLATE.md
openspec/specs/: INDEX.yaml
openspec/stories/: _TEMPLATE.md
openspec/traceability/: matrix.yaml
scripts/: install_bmad.sh
tools/ci/tests/: conftest.py  (+4 more)
tools/spec_lint/: __init__.py  __main__.py  _sections.py  _top_level_allowlist.py  config.yaml  git_history.py  index.py  models.py  parser.py
(+252 files in other folders)
