[project]
name = "test-repo-tooling"
version = "0.0.0"
description = "Repo-internal tooling (spec-lint, trace, ci). Not published."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

[tool.setuptools]
packages = []
